# razd

./: .gitignore  .razd-workflow-default.yml  AI_USAGE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Razdfile.yml  Taskfile.yml  mise.toml  test_sync_format.ps1
.github/: CI_STATUS.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/nodejs-project/: .razd-workflow-dev.yml  README.md  Razdfile.yml  Razdfile.yml.backup  index.js  mise.toml  package-lock.json  package.json
openspec/: project.md
openspec/changes/add-cli-args-support/: proposal.md  tasks.md
openspec/changes/add-custom-task-runner/: proposal.md  tasks.md
openspec/changes/add-github-actions-ci/: design.md  tasks.md
openspec/changes/add-list-command/: proposal.md  tasks.md
openspec/changes/add-list-formatting-options/: design.md
openspec/changes/add-razd-yml-config/: proposal.md  tasks.md
src/: defaults.rs  lib.rs  main.rs
src/commands/: build.rs  dev.rs  init.rs  install.rs  list.rs  mod.rs  run.rs  setup.rs  task.rs  trust.rs  up.rs
src/config/: canonical.rs  defaults.rs  detection.rs  file_tracker.rs  mise_generator.rs  mise_sync.rs  mise_validator.rs  mod.rs  razdfile.rs
src/core/: error.rs  mod.rs  output.rs  trust.rs
src/integrations/: git.rs  mise.rs  mod.rs  process.rs  taskfile.rs
tests/: integration_tests.rs  mise_integration_tests.rs  order_integration_test.rs  sync_integration_tests.rs
(+97 files in other folders)
