[package]
name = "razd"
version = "0.3.0"
edition = "2021"
authors = ["razd team"]
description = "A CLI tool for streamlined project setup with git, mise, and taskfile integration"
homepage = "https://github.com/razd-cli/razd"
repository = "https://github.com/razd-cli/razd"
license = "MIT"
keywords = ["cli", "development", "project-setup", "mise", "taskfile"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.74.0"

[[bin]]
name = "razd"
path = "src/main.rs"

[lib]
name = "razd"
path = "src/lib.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime and process execution
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Colored output
colored = "2.0"

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml_edit = "0.22"
toml = "0.8"
indexmap = { version = "2.0", features = ["serde"] }

# Validation
regex = "1.10"

# Hashing
sha2 = "0.10"

# Path handling
path-clean = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"